--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --config webpack.config.ts",
     "start": "webpack serve --open",
     "watch": "webpack --watch",
-    "prettier": "prettier --write src/**/*.ts",
+    "prettier": "prettier --write src/",
     "eslint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "eslint": "^8.32.0",
     "eslint-plugin-import": "^2.27.4",
