--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "scripts": {
-    "build": "tsc --project ./tsconfig.json",
-    "build:webpack": "webpack --config webpack.config.ts",
+    "build": "webpack --config webpack.prod.config.ts",
+    "build:dev": "webpack --config webpack.config.ts",
     "start": "webpack serve --open",
     "watch": "webpack --watch",
     "postinstall": "npm run build",
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "copy-webpack-plugin": "^11.0.0",
@@ -36,6 +37,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "path-browserify": "^1.0.1",
     "ts-loader": "^9.4.2"
   }
 }
