Update build scripts

--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "main": "dist/main.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "webpack --config webpack.prod.config.ts",
-    "build:dev": "webpack --config webpack.config.ts",
+    "build": "npm run clean && tsc && npm run copy-assets",
+    "build:demo": "webpack --config webpack.config.ts",
     "start": "webpack serve --open",
     "watch": "webpack --watch",
+    "clean": "rimraf dist/",
+    "copy-assets": "cp -r src/assets dist/assets",
     "postinstall": "npm run build",
     "prettier": "prettier --write src/",
     "eslint": "eslint .",
@@ -27,6 +29,7 @@
     "eslint-plugin-import": "^2.27.4",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.8.3",
+    "rimraf": "^6.0.1",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
